modificaciones README